# simba-mcp

./: .commitmsg  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/simba_mcp/: __init__.py  __main__.py  api_client.py  server.py
tests/: test_api_client.py  test_server.py
