[project]
name = "simba-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for SIMBA — connect Claude, Cursor, and AI assistants to Bayesian Marketing Mix Models (MMM)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "SIMBA", email = "hello@getsimba.ai" }]
keywords = ["mcp", "model-context-protocol", "marketing-mix-model", "mmm", "bayesian", "simba", "pymc", "budget-optimization", "media-attribution", "roi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.1.3",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://getsimba.ai"
Repository = "https://github.com/getsimba-ai/simba-mcp"
Documentation = "https://github.com/getsimba-ai/simba-mmm"

[project.scripts]
simba-mcp = "simba_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simba_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.4",
]
