[project]
name = "simba-mcp"
version = "0.1.2"
description = "MCP server for Simba Marketing Mix Modeling — connect AI assistants to your MMM models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Simba", email = "hello@simba-mmm.com" }]
keywords = ["mcp", "marketing-mix-model", "mmm", "bayesian", "simba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.1.3",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://simba-mmm.com"
Repository = "https://github.com/getsimba-ai/mcp-server"
Documentation = "https://docs.simba-mmm.com"

[project.scripts]
simba-mcp = "simba_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simba_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.4",
]
